core/unpackaged/main/default/objects/Plant_Recipient__c/Plant_Recipient__c.object-meta.xml
<CustomObject>
    <label>Plant Recipient</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>