core/unpackaged/main/default/objects/Plant_Recipient__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Plant Recipients</relationshipLabel>
    <relationshipName>Plant_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>