core/unpackaged/main/default/objects/Plant_Recipient__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>