core/unpackaged/main/default/objects/Plant_Recipient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Plant__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>